@@ -23,14 +23,6 @@
 
 #include "combobox.h"
 #include "lineedit.h"
-#include "utils.h"
-#include <QAbstractItemView>
-#include <QDesktopWidget>
-#include <QApplication>
-#include "gtkstyle.h"
-
-// Max number of items before we try to force a scrollbar in popup menu...
-static int maxPopupItemCount=-1;
 
 ComboBox::ComboBox(QWidget *p)
     #ifdef ENABLE_KDE_SUPPORT
@@ -38,17 +30,7 @@ ComboBox::ComboBox(QWidget *p)
     #else
     : QComboBox(p)
     #endif
-    , toggleState(false)
 {
-    #if !defined Q_OS_WIN && !defined Q_OS_MAC
-    if (-1==maxPopupItemCount) {
-        if (QApplication::desktop()) {
-            maxPopupItemCount=((QApplication::desktop()->height()/(QApplication::fontMetrics().height()*1.5))*0.75)+0.5;
-        } else {
-            maxPopupItemCount=32;
-        }
-    }
-    #endif
     #if QT_VERSION >= 0x050000
     connect(this, SIGNAL(editTextChanged(QString)), this, SIGNAL(textChanged(QString)));
     #endif
@@ -62,67 +44,3 @@ void ComboBox::setEditable(bool editable)
         setLineEdit(edit);
     }
 }
-
-#if !defined Q_OS_WIN && !defined Q_OS_MAC
-void ComboBox::showPopup()
-{
-    if (GtkStyle::isActive() && count()>(maxPopupItemCount-2)) {
-        toggleState=!isEditable();
-
-        // Hacky, but if we set the combobox as editable - the style gives the
-        // popup a scrollbar. This is more convenient if we have lots of items!
-        if (toggleState) {
-            setMaxVisibleItems(maxPopupItemCount);
-            QComboBox::setEditable(true);
-            lineEdit()->setReadOnly(true);
-        }
-    }
-    QComboBox::showPopup();
-//    if (Utils::touchFriendly()) {
-//        view()->setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
-//        view()->setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
-//    }
-
-    if (GtkStyle::isActive() && parentWidget() && view()->parentWidget() && count()>maxPopupItemCount) {
-        // Also, if the size of the popup is more than required for 32 items, then
-        // restrict its height...
-        int maxHeight=maxPopupItemCount*view()->sizeHintForRow(0);
-        QRect geo(view()->parentWidget()->geometry());
-        QRect r(view()->parentWidget()->rect());
-        if (geo.height()>maxHeight) {
-            geo=QRect(geo.x(), geo.y()+(geo.height()-maxHeight), geo.width(), maxHeight);
-            r=QRect(r.x(), r.y()+(r.height()-maxHeight), r.width(), maxHeight);
-        }
-        QPoint popupBot=view()->parentWidget()->mapToGlobal(r.bottomLeft());
-        QPoint bot=mapToGlobal(rect().bottomLeft());
-
-        if (popupBot.y()<bot.y()) {
-            geo=QRect(geo.x(), geo.y()+(bot.y()-popupBot.y()), geo.width(), geo.height());
-        } else {
-            QPoint popupTop=view()->parentWidget()->mapToGlobal(r.topLeft());
-            QPoint top=mapToGlobal(rect().topLeft());
-            if (popupTop.y()>top.y()) {
-                geo=QRect(geo.x(), geo.y()-(popupTop.y()-top.y()), geo.width(), geo.height());
-            }
-        }
-        view()->parentWidget()->setGeometry(geo);
-
-        #ifndef ENABLE_KDE_SUPPORT
-        // Hide scrollers - these look ugly...
-        foreach (QObject *c, view()->parentWidget()->children()) {
-            if (0==qstrcmp("QComboBoxPrivateScroller", c->metaObject()->className())) {
-                static_cast<QWidget *>(c)->setMaximumHeight(0);
-            }
-        }
-        #endif
-    }
-}
-
-void ComboBox::hidePopup()
-{
-    if (GtkStyle::isActive() && count()>(maxPopupItemCount-2) && toggleState) {
-        QComboBox::setEditable(false);
-    }
-    QComboBox::hidePopup();
-}
-#endif
